--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <div class="check-area">
             <div class="check-area-controls">
-                <input type="text" id="source" class="check-area-controls-item" />
-                <button value="Parse" id="parse-btn" class="check-area-controls-item" onclick="Parse()">Parse</button>
+                <input type="text" id="source" class="check-area-controls-item" onkeyup="CheckInput()"/>
+                <button value="Parse" id="parse-btn" class="check-area-controls-item" onclick="GetResult()">Parse</button>
             </div>
             <div class="results">
 
