--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
                             <pre>
 let res = false;
 
-if (str.length === 0 || index === str.length) {
+if (str.length !== 0 && index === str.length) {
     res = true;
 }
 else if (str[index] === '1') {
     index++;
-    res = ParseExpression(str);
+    res = ParseContinuation(str);
 }
 else if (str[index] === '2') {
     index++;
     res = ParseAfter2(str);
-    res = res && ParseExpression(str);
+    res = res && ParseContinuation(str);
 }
 
 return res;</pre>
@@ -105,7 +105,7 @@ return res;</pre>
                             <pre>
 let res = false;
 
-if (str.length === 0 || index === str.length) {
+if (index === str.length) {
     res = true;
 }
 else if (str[index] === '1') {
@@ -115,10 +115,10 @@ else if (str[index] === '1') {
 else if (str[index] === '2') {
     index++;
     res = ParseAfter2(str);
-    res = res && ParseExpression(str);
+    res = res && ParseContinuation(str);
 }
 
-return res;</pre>
+return res;                 </pre>
                     </td>
                 </tr>
                 </tbody>
