--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ return res;</pre>
                 </tr>
                 <tr>
                     <td>
-                        &lt;After2> ::= 0&lt;Continuation> | 1&lt;After2> | 2&lt;After2>&lt;After2>
+                        &lt;After2> ::= 0 | 1&lt;After2> | 2&lt;After2>&lt;After2>
                     </td>
                     <td class="diagram2"></td>
                     <td>
